// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertType should detect incorrect types 1`] = `
"
file:1:1: Not a valid type
1
^"
`;

exports[`convertType should detect incorrect types 2`] = `
"
file:1:1: Not a valid type
\\"hello\\"
^"
`;

exports[`convertType should detect incorrect types 3`] = `
"
file:1:2: Not a valid type
(1 2 3)
-^"
`;

exports[`convertType should detect incorrect types 4`] = `
"
file:1:2: Not a valid type
(\\"hello\\" \\"world\\")
-^"
`;

exports[`convertType should read extensible record 1`] = `
Object {
  "node": Object {
    "args": Array [
      Object {
        "node": Object {
          "extends": Object {
            "node": Object {
              "extends": Object {
                "node": Object {
                  "name": "a",
                  "tag": "type-variable",
                  "userSpecified": false,
                },
              },
              "label": ":y",
              "labelType": Object {
                "node": Object {
                  "name": "number",
                  "tag": "constant",
                },
              },
              "tag": "row-extension",
            },
          },
          "label": ":x",
          "labelType": Object {
            "node": Object {
              "name": "number",
              "tag": "constant",
            },
          },
          "tag": "row-extension",
        },
      },
    ],
    "op": Object {
      "node": Object {
        "name": "record",
        "tag": "constant",
      },
    },
    "tag": "application",
  },
}
`;
